<resources>
    <string name="app_name">ResepMakanan</string>
    <string name="bhnNasgor">~ 200 gram cumi potong memanjang\n
        <br> ~ 150 gram udang gram</br>\n
        <br>~ 1 buah bawang bombay, iris memanjang</br>\n
        <br>~ 2 sdm minyak</br>
        </string>
    <string name="bmNasgor">~ 2 siung bawang putih, cincang halus\n
        <br>~ 1 sdm saus tiram</br>\n
        <br>~ 1 sdm kecap ikan</br>\n
        <br>~ 1 sdm kecap manis</br>\n
        <br>~ 1 sdm angciu atau arak masak</br>\n
        <br>~ 3 sdm kecap asin</br>
    </string>
    <string name="cmNasgor">1. Panaskan minyak dan tumis bawang putih sampai harum\n
    <p>2. masukkan cumi, udang dan bawang bombay aduk sebentar</p>\n
        <p>3. masukkan nasi dan tambahkan saus tiram, kecap ikan, kecap manis, aduk sampai nasi dan bumbu tercampur rata, angkat</p>\n
        <p>4. Taruh di piring dan sajikan</p>
    </string>
    <string name="bhnpecel">~ 1 ikat bayam, siangi\n
        <p>~ 10 batang kacang panjang, potong 2 cm</p>\n
        <p>~ 100 gram taoge, buang ekornya</p>\n
        <p>~ 2 mentimun sayur, potong tipis</p>\n
        <p>~ 250 ml air masak</p>\n
        <p>~ 250 gram kacang tanah, goreng</p>\n
        <p>~ 3 buah cabai merah besar, goreng</p>
    </string>
    <string name="bmnaspec">~ 4 siung bawang putih, goreng\n
        <p>~ 1 sdt asam jawa</p>\n
        <p>~ 3 lembar daun jeruk</p>\n
        <p>~ 3 ruas jari kencur</p>\n
        <p>~ 1/2 sdt garam</p>\n
        <p>~ sdt gula pasir</p>\n
        <p>~ trancam mentah</p>\n
        <p>~ 1 buah mentimun, cincang kasar</p>\n
        <p>~ 3 sdm petai cina</p>\n
        <p>~ 10 kuntum daun kemangi</p>\n
        <p>~ 3 sendok makan taoge pendek</p>
    </string>
    <string name="bhnpeyek">~ 100 gram kacang tanah, belah 2\n
        <p>~ 150 gram tepung beras</p>\n
        <P>~ 1 sdm tepung kanji</P>\n
        <P>~ 100 ml santan kental dari 250 gram kelapa parut</P>\n
        <p>~ 250 ml air</p>\n
        <p>~ minyak goreng secukupnya</p>
     </string>
    <string name="bhntempe">~ 300 gram tempe, hancurkan\n
        <p>~ 50 gram tempe setengah asam</p>\n
        <p>~ 2 sdm tepung terigu</p>\n
        <p>~ minyak goreng secukupnya</p>\n
    </string>
    <string name="bhnayam">~ 1 kg ayam utuh,potong 8 atw sesuai selera\n
        <p>~ 2 lembar daun salam</p>\n
        <p>~ 2 lembar daun jeruk</p>\n
        <p>~ secukupnya Garam</p>\n
        <p>~ secukupnya Air utk memasak ayam</p>\n
        <p>~ 7 siung bawang merah</p>\n
        <p>~ 5 siung bawang putih</p>\n
        <p>~ 1 ruas kunyit</p>\n
        <p>~1 ruas jahe</p>\n
        <p>~ 2 ruas jempol lengkuas​</p>\n
        <p>~ 4 kemiri</p>\n
        <p>~ 1 btg sereh, bagian putihnya</p>\n
        <p>~ Air utk mengungkep ayam</p>\n
    </string>
    <string name="bhnkentang">~ 1/2 kg kentang,potong kotak\n
        <p>~ sesuai selera Kaldu bubuk rasa ayam,garam, penyedap rasa</p>\n
        <p>~1/2 sdt gula merah disisir, 2 salam dan 2 cm lengkuas digeprek</p>\n
        <p>~ 5 cabai rawit merah</p>\n
        <p>~ 14 cabai merah keriting</p>\n
        <p>~ 4 siung bawang putih</p>\n
        <p>~ 2 kemiri</p>\n
        <p>~ 10 siung bawang merah</p>
    </string>
    <string name="bhnmigor">~ 1 mie telur cap 3 ayam\n
        <p>~ 2 btg daun bawang,iris serong memanjang</p>\n
        <p>~ 1/4 kol dr kol utuh, iris kasar</p>\n
        <p>~ 1/2 bawang Bombay,iris tipis</p>\n
        <p>~ 1/2 sdm lada bubuk dan kecap manis secukupnya</p>\n
        <p>~ sedikit Garam, aj Krn kaldu bubuk sdh asin</p>\n
        <p>~ 5 siung bawang putih</p>\n
        <p>~ 5 siung bawang merah</p>\n
        <p>~ 3 kemiri</p>
    </string>
    <string name="cmnasrem">1. Cuci bersih ayam, lalu taruh di wajan, tambahkan bumbu halus,bumbu yg lain dan beri air secukupnya. Masak ayam dengan api sedang cenderung kecil sampai air menyusut dan bumbu meresap.
            Panaskan minyak goreng, lalu gorenglah ayam di api besar, dan segera angkat setelah bagian luar daging ayam berkulit dan kering.\n\n
        <p>2. Kupas kentang, bersihkan dan potong dadu/ kotak kecil, lalu goreng dan sisihkan.
            Tumis bumbu halus,daun salam dan lengkuas sampai harum dan gak langu. Beri air sedikit agar bumbu tumisan tdk kering.
            Lalu masukkan kentang yg sdh digoreng aduk rata lalu masukkan kaldu bubuk, penyedap rasa dan garam secukupnya.
             Aduk rata dan masak sampai bumbu rmeresap, koreksi rasa dan siap disajikan. </p>\n\n
        <p>3. Seduh mie dgn air mendidih (nyeduhnya jgn sampai lodoh) sblm menyeduh mie, masukkan sedikit minyak di air mendidih nya agar mie tdk lengket,lalu tiriskan Tumis bumbu halus dan bawang bombay sampai harum,
            tambah sedikittt air aj(kurleb 50 ml) agar tdk kering, kemudian masukkan sayuran aduk rata masak hingga agak layu, lalu masukkan mie tambahkan kecap manis, lada bubuk, kaldu bubuk, dan sedikit garam aduk sampai
            bumbu merata dan meresap, lalu koreksi rasa.</p>\n\n
        <p>4. Ambil piring lalu ambil nasi dan cetak dimangkok kecil, taburi bawang goreng, tata semua lauk, tambah irisan mentimun dan tomat.. yummy..nasi rames siap disantap.</p>\n
    </string>
    <string name="bhnnascam">- 1 ekor ayam Jawa\n
        <p>- 5 telur ayam</p>\n
        <p>- 5 tahu</p>\n
        <p>- 8 siung bawang merah</p>\n
        <p>- 5 siung bawang putih</p>\n
        <p>- 6 kemiri</p>\n
        <p>- 1 sdt ketumbar</p>\n
        <p>- 0,5 sdt lada bubuk</p>\
        <p>- 3 lembar daun salam</p>\n
        <p>- 3 lembar daun jeruk</p>\n
        <p>- 3 cm lengkuas digeprek</p>\n
        <p>- 1 serai digeprek</p>\n
        <p>- 2 bungkus santan</p>\n
        <p>- 4 sdm kecap manis</p>\n
        <p>- Gula Jawa</p>\n
        <p>- Gula, garam, dan penyedap</p>
    </string>
    <string name="bhnmiesoun">- 1 papan mi soun\n
        <p>- 3 siung bawang putih</p>\n
        <p>- 3 siung bawang merah</p>\n
        <p>- 2 cabai merah besar</p>\n
        <p>- 2 sdm kecap manis</p>\n
        <p>- Gula, garam, dan lada bubuk</p>\n
    </string>
    <string name="bhnbuncis">- 8 buncis - 2 buah wortel\n
        <p>- 4 siung bawang putih </p>\n
        <p>- 3 siung bawang merah </p>\n
        <p>- 2 cabai merah besar </p>\n
        <p>- 5 sdm air putih - Gula, garam, dan lada bubuk</p>
    </string>
    <string name="cmnascam">1. Semur: blender halus semua bahan bumbu kecuali daun salam, daun jeruk, serai, dan lengkuas. Kemudian tumis hingga harum. Masukkan serai geprek,
            daun salam, daun jeruk, dan lengkuas geprek. Diikuti ayam Jawa yang sudah dipotong-potong, air dan santan, tahu, telur rebus, kecap manis, gula Jawa, gula, garam, dan
            lada bubuk. Masak di api kecil hingga matang.\n\n
        <p>2. Mi soun: rebus soun, angkat dan tiriskan.
            Iris tipis bawang merah, bawang putih, cabai merah, dan tumis hingga harum, diikuti mi soun, gula, garam, lada bubuk, dan kecap manis.</p>\n
        <p>3. Tumis buncis wortel: iris tipis-tipis bawang merah, bawang putih, cabai merah besar, dan tumis hingga harum, diikuti buncis, wortel, air, gula, garam, dan lada.
            Masak hingga matang.</p>\n\n
        <p>4. Tata nasi dengan lauknya di piring kemudian siap untuk disajikan.</p>
    </string>
    <string name="bhnnastim">~ Beras - 300 gram\n
        <p>~ Air - 500 ml</p>\n
        <p>~ Daun pisang, untuk membungkus - secukupnya</p>\n
        <p>~ Ayam goreng - 4 potong</p>\n
        <p>~ Tahu goreng - 4 potong</p>\n
        <p>~ Tempe goreng - 4 potong</p>\n
        <p>~ Mentimun, dipotong-potong - 1 buah</p>\n
        <p>~ Daun kemangi, dipetik daunnya - 1 ikat</p>\n
        <p>~ Selada - 1 ikat</p>\n
        <p>~ Sambal terasi - secukupnya</p>
    </string>
    <string name="cmnastim">1. Cuci beras sampai bersih\n
        <p>2. Didihkan air dalam panci, lalu masukan beras dan aduk sampai air meresap.</p>\n
        <p>3. Matikan api, diamkan selama 10 menit.</p>\n
        <p>4. Kukus beras selama 30 menit sampai matang. Angkat. </p>\n
        <p>5. Ambil selembar daun pisang dan taruh 5 sendok makan nasi. Gulung daun pisang. Puntir ujung daun kanan dan kiri. Masukkan ke bagian tengah sambil didorong ke dalam.</p>
    </string>
    <string name="bhnsyrasam">~ 500 gram iga sapi\n
        <br>~ 1,5 liter air</br>\n
        <br>~ 2 lembar daun salam</br>\n
        <br>~ 2 lembar daun so</br>\n
        <br>~ 2 buah mentimun, potong–potong</br>\n
        <br>~ 1 sendok teh asam jawa larutkan dengan 2 sendok makan air</br>\n
        <br>~ 100 gram kacang panjang, potong – potong</br>\n
        <br>~ 1 buah jagung manis, potong 4 bagian</br>
    </string>
    <string name="bmsyrasam">~ 5 butir bawang merah\n
        <br>~ 2 siung bawang putih</br>\n
        <br>~ 2 buah cabai merah</br>\n
        <br>~ ¼ sendok teh terasi goreng</br>\n
        <br>~ 2 butir kemiri</br>
    </string>
    <string name="cmsyrasam">1. Didihkan air, masukkan iga dan daun salam. Masak hingga daging matang dan empuk\n
        <br>2. Beri bumbu halus, masak kembali hingga bumbu matang. Tambahkan mentimun, kacang panjang, jagung manis, air asam. Masak hingga bahan matang. angkat, sajikan.</br>
    </string>
    <string name="bhnsyrbobor">~ 2 gelas santan dari 1/4 butir kelapa\n
        <br>~ 2 lembar daun salam</br>\n
        <br>~ 50 gram tempe setengah busuk, potong dadu</br>\n
        <br>~ 2 ikat kacang panjang, potong 3 cm</br>
    </string>
    <string name="bmsyrbobor">~ 2 siung bawang putih\n
        <br>~ 4 butir bawang merah</br>\n
        <br>~ 2 cm kencur</br>\n
        <br>~ 1/2 sdt garam</br>
    </string>
    <string name="cmsyrbobor">1. didihkan santan masukkan daun salam, tempe, kacang panjang dan bumbu halus. Aduk dan masak hingga kacang panjang masak\n
        <br>2. Tempatkan sayur bobor di mangkuk saji, hidangkan selagi panas</br>
    </string>
    <string name="bhnsyrcapcay">~ wortel. iris tipis, 1 buah\n
        <br>~ sawi putih potong 5 lembar</br>\n
        <br>~ sawi hijau potong 5 lembar</br>\n
        <br>~ bunga kol potong 75 gram</br>\n
        <br>~ daun bawang iris serong 2 batang</br>\n
        <br>~ bakso belah dua 5 butir</br>\n
        <br>~ ati, empela, rebus lalu potong</br>\n
        <br>~ paha ayam goreng lalu suwir</br>\n
        <br>~ kekian goreng lalu potong 100 gram</br>\n
        <br>~ 3 sdm minyak</br>\n
        <br>~ air secukupnya</br>
    </string>
    <string name="bmsyrcapcay">~ bawang merah, cincang 2 butir\n
        <br>~ bawang putih haluskan 3 siung</br>\n
        <br>~ kemiri, sangrai lalu haluskan 2 butir</br>\n
        <br>~ merica bubuk 1/2 sdt</br>\n
        <br>~ garam 1 sdt</br>\n
        <br>~ gula pasir 1/2 sdt</br>\n
        <br>~ kecap manis 1/2 sdm</br>\n
        <br>~ kaldu bubuk 1/2 sdt</br>
    </string>
    <string name="cmsyrcapcay">1. dalam wadah, campurkan semua bahan lalu aduk hingga benar-benar rata\n
        <br>2. panaskan minyak, tumis bawang merah, putih dan kemiri hingga harum</br>\n
        <br>3. masukkan bakso, ati empela, dan ayam suwir</br>\n
        <br>4. tuangkan sedikit air, masukkan wortel sawi, dan kembang kol, aduk rata dan masak hingga sayuran matang</br>\n
        <br>5. tambahkan garam, merica, gula, kecap</br>\n
        <br>6. masukkan daun bawang</br>\n
        <br>7. sajikan dengan taburan bawang goreng</br>
    </string>
    <string name="bhnsyrlabu">~ 2 buah labu siam\n
        <br>~ 4 lembar daun salam</br>\n
        <br>~ 1 ruas ibu jari lengkuas</br>\n
        <br>~ 750 ml santan</br>\n
        <br>~ 3 sdm minyak</br>\n
        <br>~ 4 buah cabe hijau</br>
    </string>
    <string name="bmsyrlabu">~ 4 buah cabai merah\n
        <br>~ 8 butir bawah merah</br>\n
        <br>~ 3 siung bawah putih</br>\n
        <br>~ garam secukupnya</br>
    </string>
</resources>