<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bgnaspeec"
    tools:context=".naspec">
    <ImageView
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_action_name"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"
        android:onClick="imgback"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nasi Pecel"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="230sp"
        android:paddingBottom="15dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bahan Pecel"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingTop="5sp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bhnpecel"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bumbu"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingTop="5sp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmnaspec"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bumbu"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingTop="5sp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cmNasgor"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bahan peyek kacang"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingTop="5sp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bhnpeyek"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bahan Tempe"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingTop="5sp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bhntempe"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>